--- a/src/css/Dan Weatherbee _ Modern Web Developer _ JavaScript _ HTML5 _ CSS3 _ New Technologies_files/worldplay.css
+++ b/src/css/Dan Weatherbee _ Modern Web Developer _ JavaScript _ HTML5 _ CSS3 _ New Technologies_files/worldplay.css
@@ -15,6 +15,21 @@ a .showcase-details:hover,
     color: #FFFFFF;
 }
 
+.learn-more:after {
+    content: "\f105";
+}
+
+.read-more {
+    color: #00A9E0;
+    font-style: italic;
+    padding-top: 10px;
+    display: inline-block;
+}
+
+.read-more:hover {
+    color: #0279A1;
+}
+
 #showcase-container {
     position: relative;
 }
@@ -91,4 +106,18 @@ span.showcase-action {
     display: inline;
 }
 
+@media only screen and (min-width: 1300px) {
+    .showcase-details h3 {
+        font-size: 40px;
+        font-weight: 100;
+    }
 
+    .showcase-details p {
+        font-size: 16px;
+    }
+
+    iframe.showcase-banner,
+    .showcase-details {
+        height: 150px;
+    }
+}
